# phono-feature

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RUN-Linux.sh  RUN-Mac.command  RUN-Windows.bat  SECURITY.md  main.py  pyproject.toml  requirements.txt  test_engine.py
app/: pyproject.toml
app/inventories/: _schema.json  blevins_features.json  english_features.json  general_features.json  hayes_features.json  hindi_features.json  untitled_inventory_features.json
app/src/phonology_features/: __main__.py  _logging.py  _settings.py
app/src/phonology_features/engine/: feature_engine.py  geometry.py  inventory.py  inventory_validator.py  segment_grouper.py
app/src/phonology_features/gui/: _themed_style_cache.py  analysis.py  constants.py  geometry_controller.py  grid_logic.py  inventory_dir_controller.py  inventory_setup.py  layout.py  main_window.py  mode_controller.py  mode_logic.py  palette.py  style_utils.py  theme_controller.py  themed_widgets.py  view_models.py  vowel_chart.py  vowel_layout.py  widgets.py
app/tests/: conftest.py  test_analysis_panel_clear.py  test_analysis_peek.py  test_bridge_validation.py  test_builder_dialog.py  test_builder_grid.py  test_clear_buttons.py  test_cross_ui_parity.py  test_engine_api.py  test_feature_panel_layout.py  test_grid_logic.py  test_header_styling.py  test_inventory_contract.py  test_inventory_setup.py  test_jsfallback_parity.py  test_layout_dpi_scaling.py  test_layout_no_overlap.py  test_layout_resolutions.py  test_layout_stress.py  test_layout_ultrawide_monitors.py  test_limits_relay.py  test_main_window_peek_integration.py  test_mode_logic.py  test_mode_toggle.py  test_palette_modes.py  test_pane_distribution.py  test_save_controller.py  test_segment_grid_spillover.py  test_segment_spillover.py  test_settings_keys.py  test_size_policies.py  test_status_text_relay.py  test_view_models.py  test_vowel_layout.py
app/tools/: capture_screens.py  profile_app.py
desktop/: pyproject.toml
desktop/inventories/: _schema.json  english_features.json  german_features.json  hayes_features.json  hindi_features.json  ilokano_features.json  indonesian_features.json  japanese_features.json  korean_features.json  lango_features.json  lomongo_features.json  mandarin_chinese_features.json  maximalist_vowels.json  modern_standard_arabic_features.json  romanian_features.json  spanish_features.json  tobabatak_features.json  turkish_features.json
desktop/src/phonology_features/: __main__.py  _logging.py  _settings.py
desktop/src/phonology_features/gui/: _themed_style_cache.py  main_window.py  phoible_dialog.py  style_utils.py  themed_widgets.py  vowel_chart.py  widgets.py
desktop/src/phonology_features/providers/: __init__.py  panphon_provider.py
desktop/tests/: conftest.py  test_analysis_class_state_resets_on_mode_swap.py  test_analysis_floor_invariance.py  test_builder_dialog.py  test_builder_grid.py  test_builder_open_close_reopen.py  test_class_visibility.py  test_clear_buttons.py  test_close_during_debounce.py  test_feature_panel_layout.py  test_feature_row_glossary.py  test_header_styling.py  test_inventory_contract.py  test_layout_no_overlap.py  test_layout_stress.py  test_main_window_peek_integration.py  test_match_mode_tooltip.py  test_mode_toggle.py  test_palette_modes.py  test_panphon_provider.py  test_phoible_dialog.py  test_save_controller.py  test_segment_grid_spillover.py  test_settings_keys.py  test_setup_dialog_panphon.py  test_size_policies.py  test_stability_regressions.py  test_transactional_loopholes.py
shared/: pyproject.toml
shared/src/phonology_shared/application/: __init__.py  session_state.py
shared/src/phonology_shared/chart/: __init__.py  consonants.py  segment_classes.py  vowel_space.py  vowels.py  vowels_layout.py
shared/src/phonology_shared/data/: __init__.py  _parse.py  inventory.py  limits.py
shared/src/phonology_shared/editor/: __init__.py  grid.py  inventory_providers.py  lookup_provider.py  panphon_features.py  phoible_features.py  phoible_provider.py  providers.py  setup.py
shared/src/phonology_shared/engine/: __init__.py  feature_engine.py  geometry.py  inventory.py  limits.py  segment_grouper.py
shared/src/phonology_shared/presentation/: __init__.py  analysis.py  chart_style.py  constants.py  (+6 more)
shared/tests/: _inventory_names.py  conftest.py  test_active_features.py  test_analysis_floor_and_plan.py  test_chart_style_relay.py  test_class_caps.py  test_consonants_derivations.py  test_consonants_grouping_snapshot.py  test_contour_segments.py  test_declared_class_primitives.py  test_display_dialect.py  test_editor_mirror_parity.py  test_engine_api.py  test_feature_metadata.py  test_feature_provider_contract.py  test_grid_logic.py  test_header_styling.py  test_inventory_atomic_write.py  test_inventory_indexes.py  test_inventory_properties.py  test_inventory_setup.py  test_inventory_validation_issues.py  test_jsfallback_parity.py  test_laryngeal_rescue.py  test_layout_dpi_scaling.py  test_layout_resolutions.py  test_layout_ultrawide_monitors.py  test_limits_relay.py  test_lookup_feature_provider.py  test_match_mode_active_features.py  test_match_mode_cache.py  test_match_mode_completion.py  test_match_mode_find_segments.py  test_match_mode_is_natural_class.py  test_match_mode_minimal_bundles.py  test_mode_logic.py  test_mode_transition_no_engine_shape.py  test_pane_distribution.py  test_panphon_normalization.py  test_phoible_classification_stress.py  (+31 more)
shared/tests/bench/: bench_feature_categories.py
shared/tests/data/: consonants_grouping_snapshot.json
web/: README.md  api.py  eslint.config.js  index.html  main.js  package-lock.json  package.json  pyproject.toml  sitemap.xml  style.css  sw.js
web/scripts/: bake_panphon.py  bake_phoible.py  build.py  smoke.py  subset_ipa_font.py  update_phoible.py  verify_editor_sizing.py
web/scripts/font_cache/: README.md
web/scripts/phoible_cache/: PHOIBLE_LICENSE.txt  PROVENANCE.json  README.md
web/src/phonology_web/: __init__.py  api.py
web/tests/: test_bridge_contract.py  test_bridge_validation.py  test_phoible_builder_roundtrip.py
(+108 files in other folders)
