[project]
name = "phono-feature"
version = "0.0.0"
description = "Monorepo workspace for the phonology-engine package and the desktop / web apps that consume it."
requires-python = ">=3.11"

# Workspace marker. uv (and other tools that respect it) install all
# member packages in editable mode against each other; pip users can
# run ``pip install -e packages/phonology-engine -e app`` to achieve
# the same result without uv.
[tool.uv.workspace]
members = ["packages/*", "app"]

[tool.uv.sources]
# The desktop app depends on phonology-engine. In the workspace,
# resolve that against the local source tree instead of PyPI so
# edits to the engine show up immediately in the desktop without a
# release cycle.
phonology-engine = { workspace = true }

# Isort config. Lives at the repo root so ``isort .`` from any cwd
# picks it up. Mirrors the ruff isort config in app/pyproject.toml
# so the two tools produce identical orderings; without this isort
# auto-detects ``phonology_features`` as third-party (it's pip-
# installed in the venv) and orders it BEFORE PyQt6, which ruff
# then flags as unsorted.
[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["phonology_engine", "phonology_features"]

# Black config so ``black .`` from any cwd matches the user's
# preferred ``black -l79`` invocation without needing the flag.
[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "app/.venv",
    "app/build",
    "app/dist",
    "web/dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = [
    "E501",
    # IPA-heavy sources legitimately use characters like ɡ, ʼ, and ː.
    "RUF001",
    "RUF002",
    "RUF003",
]
external = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["phonology_engine", "phonology_features"]

[tool.mypy]
python_version = "3.11"
files = [
    "app/src",
    "packages/phonology-engine/src",
    "web/api.py",
    "web/scripts/build.py",
]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = "^(app/)?build/|^web/dist/"
