[project]
name = "phono-feature"
version = "0.0.0"
description = "Monorepo workspace for the phonology-engine package and the desktop / web apps that consume it."
requires-python = ">=3.11"

# Workspace marker. uv (and other tools that respect it) install all
# member packages in editable mode against each other; pip users can
# run ``pip install -e shared -e desktop -e web`` to achieve the
# same result without uv.
[tool.uv.workspace]
members = ["shared", "desktop", "web"]

[tool.uv.sources]
# Desktop and web depend on phonology-shared. In the workspace,
# resolve that against the local source tree instead of PyPI so
# edits show up immediately in both UIs without a release cycle.
phonology-shared = { workspace = true }

# Isort config. Lives at the repo root so ``isort .`` from any cwd
# picks it up. Mirrors the ruff isort config in desktop/pyproject.toml
# so the two tools produce identical orderings; without this isort
# auto-detects ``phonology_features`` as third-party (it's pip-
# installed in the venv) and orders it BEFORE PyQt6, which ruff
# then flags as unsorted.
[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["phonology_shared", "phonology_features", "phonology_web"]
# Vendored Charis SIL source tree under ``web/scripts/font_cache``
# is gitignored but isort does not honour gitignore for nested
# paths; pin the skip here.
skip_glob = ["web/scripts/font_cache/*"]

# Black config so ``black .`` from any cwd matches the user's
# preferred ``black -l79`` invocation without needing the flag.
[tool.black]
line-length = 79
target-version = ["py311"]
# Same reason as the isort skip above; force-exclude wins over
# gitignore inference so a ``black .`` from anywhere skips the
# vendored font helper scripts.
force-exclude = '''
(
  /web/scripts/font_cache/
)
'''

[tool.mypy]
python_version = "3.11"
files = [
    "desktop/src",
    "shared/src",
    "web/src",
    "web/scripts/build.py",
]
# Strict mode: turns on every disallow_* / warn_* / check_* mypy
# offers (untyped defs, partial defs, untyped decorators, generic
# Any, implicit reexport, etc.). The extras below are not part of
# the ``strict`` bundle and are added explicitly: PyQt6 has no
# stubs so we silence the import-resolution misses;
# warn_unreachable surfaces dead branches; no_implicit_optional
# matches PEP 484 modern defaults.
strict = true
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
exclude = "^(desktop/)?build/|^web/dist/"
