[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonology-features"
version = "0.1.0"
description = "Desktop tool for browsing phonological inventories, computing natural classes, finding minimal feature bundles, and inferring feature geometry."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "John Winstead" }]
keywords = ["phonology", "linguistics", "ipa", "features", "feature-geometry", "natural-class"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = ["PyQt6>=6.6.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3.12", "mypy>=1.8", "ruff>=0.4"]

[project.scripts]
phonology-features = "phonology_features.__main__:main"

[project.urls]
Homepage = "https://github.com/jhnwnstd/features"
Issues = "https://github.com/jhnwnstd/features/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
# Surface ``# type: ignore`` comments that are no longer needed (Qt
# stubs or our own annotations have caught up). Without this dead
# ignores accumulate and silently hide real errors that move under
# them later.
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
