[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonology-features"
version = "0.1.0"
description = "Desktop tool for browsing phonological inventories, computing natural classes, finding minimal feature bundles, and inferring feature geometry."
# README.md and LICENSE here are symlinks to the repo-root files;
# setuptools refuses paths outside the pyproject directory, so the
# alternative would be two sources of truth. Symlinks keep one.
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "John Winstead" }]
keywords = ["phonology", "linguistics", "ipa", "features", "feature-geometry", "natural-class"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyQt6>=6.6.0",
    # Pure-Python phonological analysis engine. Lives at
    # ../packages/phonology-engine in the monorepo; installs from
    # PyPI in a standalone clone of just this app directory. The
    # ``RUN-*`` launchers do an editable install of the workspace
    # root, which picks up the local engine before checking PyPI.
    "phonology-engine>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3.12", "mypy>=1.8", "ruff>=0.4"]

[project.scripts]
phonology-features = "phonology_features.__main__:main"

[project.urls]
Homepage = "https://github.com/jhnwnstd/features"
Issues = "https://github.com/jhnwnstd/features/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = [
    "E501",
    # RUF001/002/003 flag "ambiguous Unicode characters" -- the
    # default policy treats e.g. ɡ (U+0261 LATIN SMALL LETTER SCRIPT
    # G) as suspicious because it resembles g (U+0067). For a
    # phonology engine these characters are the WHOLE POINT: IPA
    # notation deliberately uses script g, modifier letter
    # apostrophe (ʼ), length mark (ː), etc. Suppressing here keeps
    # the substantive RUF checks (RUF012 mutable class default,
    # RUF013 implicit Optional, etc.) active.
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
# Surface ``# type: ignore`` comments that are no longer needed (Qt
# stubs or our own annotations have caught up). Without this dead
# ignores accumulate and silently hide real errors that move under
# them later.
warn_unused_ignores = true
# Without this, function bodies that lack annotations on the def
# itself (the common Qt-override pattern in this codebase) are
# silently skipped -- mypy reports them as "annotation-unchecked"
# notes. Enabling means the actual statements inside those bodies
# are type-checked, which catches real bugs.
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
