[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonology-features"
version = "0.1.0"
description = "Desktop tool for browsing phonological inventories, computing natural classes, finding minimal feature bundles, and inferring feature geometry."
# README.md and LICENSE here are symlinks to the repo-root files;
# setuptools refuses paths outside the pyproject directory, so the
# alternative would be two sources of truth. Symlinks keep one.
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "John Winstead" }]
keywords = ["phonology", "linguistics", "ipa", "features", "feature-geometry", "natural-class"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyQt6>=6.6.0",
    # Pure-Python phonology core (engine + render helpers). Lives at
    # ../shared in the monorepo; installs from PyPI in a standalone
    # clone of just this app directory. The ``RUN-*`` launchers do
    # an editable install of the workspace root, which picks up the
    # local source before checking PyPI.
    "phonology-shared>=0.1.0",
]

[project.optional-dependencies]
# Local + CI lint / type / test stack matches the user's preferred
# command chain: ``isort . --profile black``, ``black -l 79 .``,
# ``flake8 .``, ``mypy``. flake8-bugbear gives us B-rules including
# the B950 line-length-with-10%-slack check that .flake8 selects.
dev = [
    "pytest>=7",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "isort>=5",
    "black>=24",
    "flake8>=7",
    "flake8-bugbear>=24",
    "build>=1",
]

[project.scripts]
phonology-features = "phonology_features.__main__:main"

[project.urls]
Homepage = "https://github.com/jhnwnstd/phono-feature"
Issues = "https://github.com/jhnwnstd/phono-feature/issues"

[tool.setuptools.packages.find]
where = ["src"]

# mypy config lives in the workspace-root pyproject.toml so a single
# ``mypy`` invocation from the repo root drives every member package.
# Running mypy from inside ``app/`` falls back to its parent's config
# via the standard pyproject discovery walk.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
