[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonology-shared"
version = "0.1.0"
description = "Pure-Python core for the Phonology Segment & Feature Engine. Five subpackages: data (inventory schema + caps), theory (analysis engine), chart (consonant + vowel placement), presentation (palette, layout, view models), editor (builder grid). Consumed by both the desktop and the Pyodide web app."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "John Winstead" }]
keywords = ["phonology", "linguistics", "ipa", "features", "feature-geometry", "natural-class"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
# Pure Python, stdlib only. No PyQt6, no NumPy. All five
# subpackages must remain Pyodide-distributable and UI-agnostic
# (no PyQt6, no DOM); the desktop and web frontends both consume
# them through the same import surface.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3.12", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/jhnwnstd/phono-feature"
Issues = "https://github.com/jhnwnstd/phono-feature/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
